fixes to overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -35,6 +35,7 @@ $primaryfont: MaisonNeue, sans-serif;
 $secondaryfont: MADEMirage, serif;
 
 body {
+  overflow-x: hidden;
   position: relative;
   background-color: $greycolor;
   color: $darkcolor2;
